src/style.css
#footer_inner .footer_column {
  width: 180px;
}

.animebytes > p {
  display: grid;
  grid-template-columns: 1fr 0.5fr;
  grid-auto-columns: 1fr;
}

h2.animebytes.stats {
  display: grid;
  grid-template-columns: 1fr 0.5fr 0.5fr 0.5fr;
  grid-column-gap: 40px;
  text-align: center;
}

